--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,1 +1,16 @@
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+}
 
+.centrar {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.circulo {
+  background-color: blue;
+  border-radius: 50%;
+}
