--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,17 +1,28 @@
-<h1>Tesla Motors</h1>
 
-<h2>¿Qué es esto?</h2>
-<p>El <strong>mejor</strong> sitio sobre autos Tesla</p>
-<p>Aquí te mostramos los modelos Tesla junto a sus características</p>
+  <div class="jumbotron">
+    <div class="container text-center">
+      <h1>Tesla Cars</h1>
+      <p>Bienvenidos!</p>
+    </div>
+  </div>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Tesla_Motors.svg/793px-Tesla_Motors.svg.png" width="200px">
+  <div class="container">
 
-<div class="listados">
-  <h3>Modelos</h3>
-  <ul>
-    <li>Model S</li>
-    <li>Model 3</li>
-    <li>Model X</li>
-    <li>Roadster</li>
-  </ul>
-</div>
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <i class="fab fa-accusoft fa-7x centrar"></i>
+      <h3>Misión</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a class="btn btn-default" href="#">Boton</a>
+    </div>
+
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <h3>Visión</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <h3>Objetivo</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    </div>
+  </div>
