modificaciones controlador teslas

--- a/app/views/teslas/index.html.erb
+++ b/app/views/teslas/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Teslas#index</h1>
-<p>Find me in app/views/teslas/index.html.erb</p>
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Imágenes de autos Tesla</h1>
+    <p>Enjoy yourself!</p>
+  </div>
+</div>
+
+<div class="container">
+<h1>Imágenes de usuarios</h1>
+</div>
+
+<div class="container">
+  <div class="col-md-4">
+    <img src="" alt="">
+    <h3>titulo</h3>
+    <p>description</p>
+    <p><em>autor</em></p>
+
+  </div>
+
+</div>
+
+</div>
