--- a/app/views/teslas/pictures.html.erb
+++ b/app/views/teslas/pictures.html.erb
@@ -1,2 +1,19 @@
-<h1>Teslas#pictures</h1>
-<p>Find me in app/views/teslas/pictures.html.erb</p>
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Imágenes de autos Tesla</h1>
+    <p>Agrega tu foto!</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="col-md-12">
+    <form class="" action="index.html" method="post">
+      <h2>Agrega tu imagen</h2>
+        <input type="file" name="my_pc">
+        Título de la foto <input type="text" name="autor" value="">
+        Descripción <textarea name="description" value=""></textarea>
+        Tu nombre? <input type="text" name="autor" value="">
+        <input type="submit" value="Subir!" class="btn btn-primary">
+    </form>
+  </div>
+</div>
